[package]
authors = ["AzzoDude"]
description = "Generated Rust types for js_protocol.json"
license = "MIT"
repository = "https://github.com/AzzoDude/js-protocol"
name = "js-protocol"
version = "0.1.0"
edition = "2024"
readme = "README.md"
keywords = ["cdp", "browser", "automation", "protocol"]
categories = ["development-tools", "web-programming"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
